pages/1.11/security/ent/secrets/create-secrets/index.md
---
layout: layout.pug
navigationTitle:  Creating secrets
title: Creating secrets
menuWeight: 0
excerpt:

enterprise: true
---

You can create secrets in DC/OS by using a key-value pair or as a file. Both methods add a name and secret value to the secret store. You may find it convenient to add a secret as a file if you already have a secret value stored in a file locally and want to avoid cutting-and-pasting.

See [Configuring services and pods to use secrets](/1.11/security/ent/secrets/use-secrets/) for information on how to reference these secrets in your app or pod definition.

# Creating secrets

The sections below explain how to create secrets as both key/value pairs and as files using the GUI, CLI, and the Secrets API.

Secrets should include paths, unless you want to allow all services to access its value. See [Spaces](/1.11/security/ent/#spaces) for more information about secret paths.

## Prerequisites

### DC/OS GUI
- The `dcos:superuser` permission.

### DC/OS CLI or Secrets API

- See [Secret Store Permissions](/1.11/security/ent/perms-reference/#secrets) for the permissions needed to create secrets from the CLI or API. The permissions you configure must include the name of the secret the user is allowed to create. You must have one permission per secret. The secret name and permission name must match.

- [DC/OS CLI installed](/1.11/cli/install/) and the [DC/OS Enterprise CLI installed](/1.11/cli/enterprise-cli/#ent-cli-install).

# <a name="ui"></a>Creating key-value pair secrets using the GUI

1. Log into the DC/OS GUI as a user with the `dcos:superuser` permission.

1. Open the **Secrets** tab.

1. Click the **+** icon in the top right.

    ![New Secret](/1.11/img/new-secret.png)

1. In the **ID** box, provide the name of your secret and its path, if any. Example, **developer/my-secret**.

    ![Secret ID/Value Fields](/1.11/img/secret-id-value.png)

1. Type or paste the secret into the **Value** box.

1. When you have completed your entries, the secret should look something like the following.

    ![Creating the Secret](/1.11/img/create-secret.png)

1. Click **Create**.

**Note:** It is not possible to create a [binary secret](/1.11/security/ent/secrets/#binary-secrets) using the GUI. Only the CLI can be used to create binary secrets.

# <a name="api"></a>Creating key-value pair secrets using the API

This procedure describes how to create a secret called `my-secret` inside the `developer` path.

**Note:** If your [security mode](/1.11/installing/ent/custom/configuration/configuration-parameters/#security-enterprise) is `permissive` or `strict`, you must follow the steps in [Obtaining the DC/OS CA bundle](/1.11/security/ent/tls-ssl/get-cert/) before issuing the curl commands in this section. If your [security mode](/1.11/installing/ent/custom/configuration/configuration-parameters/#security-enterprise) is `disabled`, you must delete `--cacert dcos-ca.crt` from the commands before issuing them.

1. Use `dcos auth login` log into the CLI.

1. Use the following command to create the secret.

   ```bash
   curl -X PUT --cacert dcos-ca.crt -H "Authorization: token=$(dcos config show core.dcos_acs_token)" -d '{"value":"very-secret"}' $(dcos config show core.dcos_url)/secrets/v1/secret/default/developer/my-secret -H 'Content-Type: application/json'
   ```

# <a name="cli"></a>Creating key/value pair secrets via the DC/OS Enterprise CLI

This procedure describes how to create a key/value pair secret called `my-secret` inside the `developer` path using the DC/OS Enterprise CLI.

1. Use `dcos auth login` to log into the CLI.

1. Use the following command to create the new secret.

   ```bash
   dcos security secrets create --value=top-secret developer/my-secret
   ```

# Creating secrets from any file via the DC/OS Enterprise CLI

This procedure describes how to use any file to create a secret called `myapp.keystore` inside the `developer` path using the DC/OS Enterprise CLI.

The contents of the file (referred to below as `myapp.keystore`) can be any value, including binary and text values. The secrets service encodes binary files into `BASE64` text form before storing it in secret store.

1. Use `dcos auth login` to log into the CLI.

1. Use the following command to create the new secret.

  ```bash
  dcos security secrets create -f myapp.keystore developer/keystore
  ```

   **Important:** The maximum file size for a `BASE64` encoded file is approximately one MiB, subtracting approximately one KB for the secret store metadata. This gives a room for storing a file of approximately max size of 768 KiB.

   **Important:** In previous versions of the `dcos-enterprise-cli` (below version `1.4.2`) the `-f` or `--file` flag was used to upload UTF-8 encoded text files as a text secrets. This has changed and using `-f` flag now does not treat the file as a UTF-8 encoded text file and it is stored in the DC/OS Secrets service as a binary secret.

# Creating secrets from a text file via the DC/OS Enterprise CLI

This procedure describes how to use a file to create a secret called `my-secret` inside the `developer` path using the DC/OS Enterprise CLI.

The contents of the file (referred to below as `my-secret.txt`) can be any text value.

**Note:** As of DC/OS 1.10, you can only upload a secret as a file from the DC/OS CLI. The maximum file size for a secret is approximately one MiB, subtracting approximately one KB for the secret store metadata.

1. Use `dcos auth login` to log into the CLI.

1. Use the following command to create the new secret.

  ```bash
  dcos security secrets create --text-file my-secret.txt developer/my-secret
  ```

  The value of the `my-secret.txt` should be a text encoded in UTF-8.

   **Important:** The maximum file size for a secret is approximately one MiB, subtracting approximately one KB for the secret store metadata.

   **Important:** In previous versions of the `dcos-enterprise-cli` (bellow version `1.4.2`) the `-f` or `--file` flag was used to upload UTF-8 encoded text files as a text secrets. A UTF-8 encoded text files should be uploaded using new --text-file` (or `-t` shortcut) flag.
